third_party/rust/paste/tests/ui/missing-paren-on-env.stderr
error: expected `(`
 --> tests/ui/missing-paren-on-env.rs:4:15
  |
4 |     fn [<env! huh>]() {}
  |               ^^^
