third_party/rust/paste/tests/ui/missing-paren-on-env.rs
use paste::paste;

paste! {
    fn [<env! huh>]() {}
}

fn main() {}
